<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alarm.vxtlab.heywakealarm.ui.activities.AddAlarmActivity"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/nav"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_left_right_cardview"
                android:background="@drawable/bg_add_alarm"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="Báo thức được đặt cho dưới một phút từ bây giờ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"></View>

                <TimePicker
                    android:id="@+id/timePickerAddAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"></TimePicker>
            </LinearLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayoutAlarmMode"
                android:background="@drawable/bg_add_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_left_right_cardview">

                <ImageView
                    android:id="@+id/imageViewAlarmMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_alarm_black_24dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/way_to_turn_off"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize_title_addalarm"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/imageViewAlarmMode"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewAlarmMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/default_way"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/imageViewAlarmMode"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginTop="8dp" />
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayoutSelectTune"
                android:background="@drawable/bg_add_alarm"
                android:layout_marginTop="@dimen/margin_left_right_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_vibration_black_24dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="16dp"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_notifications_black_24dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:tint="@color/colorPrimary"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/ring_tone"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize_title_addalarm"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/imageView"
                    android:layout_marginLeft="8dp" />

                <TextView
                    android:id="@+id/textViewTuneTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="8dp"
                    android:gravity="right"
                    android:text="@string/default_ring_tone"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/textView5"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    android:layout_marginTop="0dp" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4"
                    android:layout_marginTop="0dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_vibrate_on"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize_title_addalarm"
                    app:layout_constraintLeft_toRightOf="@+id/imageViewMode"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintTop_toTopOf="@+id/imageViewMode"
                    android:layout_marginTop="0dp" />
            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayoutRepeate"
                android:background="@drawable/bg_add_alarm"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_left_right_cardview">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/repeate"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize_title_addalarm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/not_repeate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.521" />
            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayoutTitle"
                android:background="@drawable/bg_add_alarm"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/margin_left_right_cardview"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_left_right_cardview">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/alarm_title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize_title_addalarm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/textView8"
                    app:layout_constraintVertical_bias="0.48" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.521"
                    app:layout_constraintLeft_toRightOf="@+id/textView8"
                    android:layout_marginLeft="16dp" />
            </android.support.constraint.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
    

    <LinearLayout
        android:id="@+id/nav"
        android:orientation="horizontal"
        android:padding="1dp"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <Button
            android:id="@+id/buttonCancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1.0"
            android:background="@color/colorPrimary"
            android:text="@string/cancle"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1.0"
            android:background="@color/colorPrimary"
            android:text="@string/OK"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
